# amber

./: .gitignore  index.html  package-lock.json  package.json  test-agent.ts  vite.config.ts
electron/: browser-history.ts  compiler.ts  config.ts  extractor.ts  import.ts  ipc.ts  knowledge.ts  main.ts  mcp-server.ts  obsidian.ts  pipeline.ts  preload.ts  scanner.ts  sources.ts  storage.ts  types.ts  validate.ts  wiki.ts
electron/summarizer/: agent.ts  processing-mcp.ts  scheduler.ts
src/: App.tsx  global.d.ts  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  config.rs  error.rs  lib.rs  main.rs  storage.rs  tray.rs
src-tauri/src/summarizer/: daily.rs  mod.rs  provider.rs
src-tauri/src/watchers/: git.rs  mod.rs
src/components/: Clients.tsx  ContextList.tsx  Home.tsx  Knowledge.tsx  Settings.tsx  Sidebar.tsx  Sources.tsx  Wiki.tsx
src/lib/: api.ts  constants.ts  importFlow.ts  navigation.ts
tests/: compiler.test.ts  config.test.ts  e2e-pipeline.test.ts  extractor.test.ts  import-memory.test.ts  importFlow.test.ts  knowledge.test.ts  mcp-server.test.ts  navigation.test.ts  pipeline.test.ts  process-date.test.ts  processing-agent.test.ts  scheduler.test.ts  session-parser.test.ts  storage.test.ts  validate.test.ts
