[package]
name = "amber"
version = "0.1.0"
edition = "2021"
description = "Personal memory system for AI agents"

[lib]
name = "amber_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "amber"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
notify = "7"
notify-debouncer-mini = "0.5"
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
thiserror = "2"
async-trait = "0.1"
log = "0.4"
env_logger = "0.11"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
